--- a/Assignment9/client/forms/package.json
+++ b/Assignment9/client/forms/package.json
@@ -13,7 +13,9 @@
     "react": "^19.0.0",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "zod": "^3.24.1",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
