deploying my backend

--- a/Assigmnent10/backend/docker-compose.yml
+++ b/Assigmnent10/backend/docker-compose.yml
@@ -22,6 +22,9 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+       - /app/.next
+      - /app/prisma
+      
 
 volumes:
   db-data:
