--- a/Assigmnent10/backend/package.json
+++ b/Assigmnent10/backend/package.json
@@ -4,14 +4,24 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "start": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node build/index.js",
+    "prisma:generate": "prisma generate",
+    "vercel-build": "npm run build",
+    "build": "npm run prisma:generate && tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node prisma/seed.js",
+    "postinstall": "prisma generate",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@faker-js/faker": "^9.3.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/adapter-neon": "^6.2.1",
+    "@prisma/client": "^6.2.1",
+    "@supabase/supabase-js": "^2.47.13",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
@@ -20,6 +30,8 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "neon": "^2.0.0",
+    "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -27,11 +39,15 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
+    "@types/ws": "^8.5.13",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
-    "prisma": "^6.1.0",
+    "prisma": "^6.2.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
-  }
+    "typescript": "^5.7.3"
+  },
+  "include": [
+    "index.ts"
+  ]
 }
