--- a/Assigmnent10/backend/Dockerfile
+++ b/Assigmnent10/backend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy package.json and package-lock.json for npm install
 COPY package*.json ./
-
+COPY prisma ./prisma/
 # Install dependencies
 RUN npm install
 
@@ -16,11 +16,14 @@ COPY . .
 # Install TypeScript globally
 RUN npm install -g typescript
 
+# Generate Prisma client
+RUN npx prisma generate
+
 # Compile TypeScript code
 RUN tsc
 
 # Expose the port your app will run on
-EXPOSE 3000
+EXPOSE 3100
 
 # Command to start the app
 CMD ["npm", "run", "dev"]
