--- a/Assigmnent10/frontend/expenses-tracker/package.json
+++ b/Assigmnent10/frontend/expenses-tracker/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
